uSync - Clean Export (for v8/v9)

--- a/src/Umbraco.Cms.9.x/uSync/v9/Content/test-misc.config
+++ b/src/Umbraco.Cms.9.x/uSync/v9/Content/test-misc.config
@@ -23,5 +23,8 @@
   "website": "https://github.com/sponsors/leekelleher"
 }]]></Value>
     </textboxList>
+    <textInput>
+      <Value><![CDATA[]]></Value>
+    </textInput>
   </Properties>
 </Content>
