--- a/src/Umbraco.Cms.9.x/uSync/v9/ContentTypes/componentbackgroundimageproperty.config
+++ b/src/Umbraco.Cms.9.x/uSync/v9/ContentTypes/componentbackgroundimageproperty.config
@@ -35,6 +35,7 @@
   </GenericProperties>
   <Tabs>
     <Tab>
+      <Key>26dd253f-839c-4717-949f-35a899850312</Key>
       <Caption>Content</Caption>
       <Alias>content</Alias>
       <Type>Group</Type>
