--- a/src/Umbraco.Cms.9.x/uSync/v9/ContentTypes/componentcoderenderpositionproperty.config
+++ b/src/Umbraco.Cms.9.x/uSync/v9/ContentTypes/componentcoderenderpositionproperty.config
@@ -35,6 +35,7 @@
   </GenericProperties>
   <Tabs>
     <Tab>
+      <Key>3d9b2636-20a6-4a82-82ac-e9537443d8e0</Key>
       <Caption>Code</Caption>
       <Alias>code</Alias>
       <Type>Group</Type>
