--- a/src/Umbraco.Cms.9.x/uSync/v9/ContentTypes/componentcodesnippetproperties.config
+++ b/src/Umbraco.Cms.9.x/uSync/v9/ContentTypes/componentcodesnippetproperties.config
@@ -51,6 +51,7 @@
   </GenericProperties>
   <Tabs>
     <Tab>
+      <Key>d7afd15b-b683-4a34-b244-61bab327d8cb</Key>
       <Caption>Code</Caption>
       <Alias>code</Alias>
       <Type>Group</Type>
