--- a/src/Umbraco.Cms.9.x/uSync/v9/ContentTypes/componentheadingproperty.config
+++ b/src/Umbraco.Cms.9.x/uSync/v9/ContentTypes/componentheadingproperty.config
@@ -35,6 +35,7 @@
   </GenericProperties>
   <Tabs>
     <Tab>
+      <Key>d2427d6b-d002-4cc3-9224-72f3fdd7b223</Key>
       <Caption>Content</Caption>
       <Alias>content</Alias>
       <Type>Group</Type>
