--- a/src/Umbraco.Cms.9.x/uSync/v9/ContentTypes/componentimageproperty.config
+++ b/src/Umbraco.Cms.9.x/uSync/v9/ContentTypes/componentimageproperty.config
@@ -35,6 +35,7 @@
   </GenericProperties>
   <Tabs>
     <Tab>
+      <Key>df944cf3-710d-4c8a-a0c8-6245f42ee528</Key>
       <Caption>Content</Caption>
       <Alias>content</Alias>
       <Type>Group</Type>
