--- a/src/Umbraco.Cms.9.x/uSync/v9/ContentTypes/componentintroproperty.config
+++ b/src/Umbraco.Cms.9.x/uSync/v9/ContentTypes/componentintroproperty.config
@@ -35,6 +35,7 @@
   </GenericProperties>
   <Tabs>
     <Tab>
+      <Key>9fbfe8ed-302b-4ffe-a4fd-7cce0e135583</Key>
       <Caption>Content</Caption>
       <Alias>content</Alias>
       <Type>Group</Type>
