--- a/src/Umbraco.Cms.9.x/uSync/v9/ContentTypes/componentlinkproperty.config
+++ b/src/Umbraco.Cms.9.x/uSync/v9/ContentTypes/componentlinkproperty.config
@@ -35,6 +35,7 @@
   </GenericProperties>
   <Tabs>
     <Tab>
+      <Key>7ff3f683-d88d-4cef-aa88-bc7f08d682db</Key>
       <Caption>Content</Caption>
       <Alias>content</Alias>
       <Type>Group</Type>
