--- a/src/Umbraco.Cms.9.x/uSync/v9/ContentTypes/footersettings.config
+++ b/src/Umbraco.Cms.9.x/uSync/v9/ContentTypes/footersettings.config
@@ -35,6 +35,7 @@
   </GenericProperties>
   <Tabs>
     <Tab>
+      <Key>08842562-ef95-49ff-9a40-e092af944c8e</Key>
       <Caption>Footer</Caption>
       <Alias>footer</Alias>
       <Type>Group</Type>
