--- a/src/Umbraco.Cms.9.x/uSync/v9/ContentTypes/headersettings.config
+++ b/src/Umbraco.Cms.9.x/uSync/v9/ContentTypes/headersettings.config
@@ -35,6 +35,7 @@
   </GenericProperties>
   <Tabs>
     <Tab>
+      <Key>b8137d3a-1f8e-472b-b670-ebeaa383af44</Key>
       <Caption>Header</Caption>
       <Alias>header</Alias>
       <Type>Group</Type>
