--- a/src/Umbraco.Cms.9.x/uSync/v9/ContentTypes/pageblocksproperty.config
+++ b/src/Umbraco.Cms.9.x/uSync/v9/ContentTypes/pageblocksproperty.config
@@ -35,6 +35,7 @@
   </GenericProperties>
   <Tabs>
     <Tab>
+      <Key>e67835df-8763-49f9-a5a3-28fe553060ea</Key>
       <Caption>Content</Caption>
       <Alias>content</Alias>
       <Type>Group</Type>
