--- a/src/Umbraco.Cms.9.x/uSync/v9/ContentTypes/pageheadingproperty.config
+++ b/src/Umbraco.Cms.9.x/uSync/v9/ContentTypes/pageheadingproperty.config
@@ -35,6 +35,7 @@
   </GenericProperties>
   <Tabs>
     <Tab>
+      <Key>77bba699-748e-4815-91de-d5e367e11471</Key>
       <Caption>Content</Caption>
       <Alias>content</Alias>
       <Type>Group</Type>
