--- a/src/Umbraco.Cms.9.x/uSync/v9/ContentTypes/pageimageproperty.config
+++ b/src/Umbraco.Cms.9.x/uSync/v9/ContentTypes/pageimageproperty.config
@@ -35,6 +35,7 @@
   </GenericProperties>
   <Tabs>
     <Tab>
+      <Key>a607c500-d700-43dc-bd81-ad839d91f2dd</Key>
       <Caption>Content</Caption>
       <Alias>content</Alias>
       <Type>Group</Type>
