--- a/src/Umbraco.Cms.9.x/uSync/v9/ContentTypes/pageintroproperty.config
+++ b/src/Umbraco.Cms.9.x/uSync/v9/ContentTypes/pageintroproperty.config
@@ -35,6 +35,7 @@
   </GenericProperties>
   <Tabs>
     <Tab>
+      <Key>fb4a92a8-3b28-4bf4-b158-c4628653ae6a</Key>
       <Caption>Content</Caption>
       <Alias>content</Alias>
       <Type>Group</Type>
