--- a/src/Umbraco.Cms.9.x/uSync/v9/ContentTypes/pagelinkproperty.config
+++ b/src/Umbraco.Cms.9.x/uSync/v9/ContentTypes/pagelinkproperty.config
@@ -35,6 +35,7 @@
   </GenericProperties>
   <Tabs>
     <Tab>
+      <Key>949a5101-dfff-4b82-b797-d0cbebf4bd4c</Key>
       <Caption>Content</Caption>
       <Alias>content</Alias>
       <Type>Group</Type>
