--- a/src/Umbraco.Cms.9.x/uSync/v9/ContentTypes/pagemodulesproperty.config
+++ b/src/Umbraco.Cms.9.x/uSync/v9/ContentTypes/pagemodulesproperty.config
@@ -35,6 +35,7 @@
   </GenericProperties>
   <Tabs>
     <Tab>
+      <Key>31638f76-cb85-4371-9d57-837e88756749</Key>
       <Caption>Settings</Caption>
       <Alias>settings</Alias>
       <Type>Group</Type>
