--- a/src/Umbraco.Cms.9.x/uSync/v9/ContentTypes/pagenavigationexternalredirectproperty.config
+++ b/src/Umbraco.Cms.9.x/uSync/v9/ContentTypes/pagenavigationexternalredirectproperty.config
@@ -35,6 +35,7 @@
   </GenericProperties>
   <Tabs>
     <Tab>
+      <Key>14fea5a8-3e2d-4a6f-b5fd-3bcfcdce4116</Key>
       <Caption>Navigation</Caption>
       <Alias>navigation</Alias>
       <Type>Group</Type>
