--- a/src/Umbraco.Cms.9.x/uSync/v9/ContentTypes/pagenavigationinternalredirectproperty.config
+++ b/src/Umbraco.Cms.9.x/uSync/v9/ContentTypes/pagenavigationinternalredirectproperty.config
@@ -35,6 +35,7 @@
   </GenericProperties>
   <Tabs>
     <Tab>
+      <Key>c57dd471-9dda-4d24-ada9-226871bc771b</Key>
       <Caption>Navigation</Caption>
       <Alias>navigation</Alias>
       <Type>Group</Type>
