--- a/src/Umbraco.Cms.9.x/uSync/v9/ContentTypes/pagenavigationinvisibleredirectproperty.config
+++ b/src/Umbraco.Cms.9.x/uSync/v9/ContentTypes/pagenavigationinvisibleredirectproperty.config
@@ -35,6 +35,7 @@
   </GenericProperties>
   <Tabs>
     <Tab>
+      <Key>fe192910-d5ff-4e5b-b88f-814685ee6caf</Key>
       <Caption>Navigation</Caption>
       <Alias>navigation</Alias>
       <Type>Group</Type>
