--- a/src/Umbraco.Cms.9.x/uSync/v9/ContentTypes/pagenavigationurlnameproperty.config
+++ b/src/Umbraco.Cms.9.x/uSync/v9/ContentTypes/pagenavigationurlnameproperty.config
@@ -35,6 +35,7 @@
   </GenericProperties>
   <Tabs>
     <Tab>
+      <Key>20e2d69c-b6d7-444b-a0b6-92821f1b9ebb</Key>
       <Caption>Navigation</Caption>
       <Alias>navigation</Alias>
       <Type>Group</Type>
