--- a/src/Umbraco.Cms.9.x/uSync/v9/ContentTypes/pagenavigationvisibilityproperty.config
+++ b/src/Umbraco.Cms.9.x/uSync/v9/ContentTypes/pagenavigationvisibilityproperty.config
@@ -35,6 +35,7 @@
   </GenericProperties>
   <Tabs>
     <Tab>
+      <Key>2f33a1a6-1dda-4a25-903a-204ff756f210</Key>
       <Caption>Navigation</Caption>
       <Alias>navigation</Alias>
       <Type>Group</Type>
