--- a/src/Umbraco.Cms.9.x/uSync/v9/ContentTypes/pagetagsproperty.config
+++ b/src/Umbraco.Cms.9.x/uSync/v9/ContentTypes/pagetagsproperty.config
@@ -35,6 +35,7 @@
   </GenericProperties>
   <Tabs>
     <Tab>
+      <Key>3ad57f18-7057-4b06-9d5d-0dd657590b5b</Key>
       <Caption>Content</Caption>
       <Alias>content</Alias>
       <Type>Group</Type>
