--- a/src/Umbraco.Cms.9.x/uSync/v9/ContentTypes/pagetextcontentproperty.config
+++ b/src/Umbraco.Cms.9.x/uSync/v9/ContentTypes/pagetextcontentproperty.config
@@ -35,6 +35,7 @@
   </GenericProperties>
   <Tabs>
     <Tab>
+      <Key>7f7a6d39-60eb-41e7-946c-3563719b831c</Key>
       <Caption>Content</Caption>
       <Alias>content</Alias>
       <Type>Group</Type>
