--- a/src/Umbraco.Cms.9.x/uSync/v9/ContentTypes/rootcontainer.config
+++ b/src/Umbraco.Cms.9.x/uSync/v9/ContentTypes/rootcontainer.config
@@ -38,6 +38,7 @@
   </GenericProperties>
   <Tabs>
     <Tab>
+      <Key>e5de2062-6241-4865-bc80-1ed2fe02e22c</Key>
       <Caption>Content</Caption>
       <Alias>content</Alias>
       <Type>Group</Type>
