--- a/src/Umbraco.Cms.9.x/uSync/v9/ContentTypes/siteglobalproperties.config
+++ b/src/Umbraco.Cms.9.x/uSync/v9/ContentTypes/siteglobalproperties.config
@@ -35,6 +35,7 @@
   </GenericProperties>
   <Tabs>
     <Tab>
+      <Key>4c10345b-6af5-44aa-8b15-9731e11cca6d</Key>
       <Caption>Settings</Caption>
       <Alias>settings</Alias>
       <Type>Group</Type>
