--- a/src/Umbraco.Cms.9.x/uSync/v9/ContentTypes/sitemodulesproperty.config
+++ b/src/Umbraco.Cms.9.x/uSync/v9/ContentTypes/sitemodulesproperty.config
@@ -35,6 +35,7 @@
   </GenericProperties>
   <Tabs>
     <Tab>
+      <Key>abce2bc1-8af3-441c-a9b9-62412130a1d4</Key>
       <Caption>Settings</Caption>
       <Alias>settings</Alias>
       <Type>Group</Type>
