--- a/src/Umbraco.Cms.9.x/uSync/v9/ContentTypes/sitenavigationproperties.config
+++ b/src/Umbraco.Cms.9.x/uSync/v9/ContentTypes/sitenavigationproperties.config
@@ -51,6 +51,7 @@
   </GenericProperties>
   <Tabs>
     <Tab>
+      <Key>b7a1c2a5-d385-4354-9d56-8dbc37389140</Key>
       <Caption>Settings</Caption>
       <Alias>settings</Alias>
       <Type>Group</Type>
