--- a/src/Umbraco.Cms.9.x/uSync/v9/ContentTypes/testdatalistpage.config
+++ b/src/Umbraco.Cms.9.x/uSync/v9/ContentTypes/testdatalistpage.config
@@ -485,66 +485,77 @@
   </GenericProperties>
   <Tabs>
     <Tab>
+      <Key>c3233977-188b-4f59-82b6-4b82f38179ae</Key>
       <Caption>.NET</Caption>
       <Alias>neT</Alias>
       <Type>Tab</Type>
       <SortOrder>10</SortOrder>
     </Tab>
     <Tab>
+      <Key>598b6fff-ae83-40d9-a0c8-b411e856ee4d</Key>
       <Caption>Content</Caption>
       <Alias>umbraco/content</Alias>
       <Type>Group</Type>
       <SortOrder>10</SortOrder>
     </Tab>
     <Tab>
+      <Key>4b47543d-d284-45d3-90be-be483bc57c03</Key>
       <Caption>Web</Caption>
       <Alias>web/web</Alias>
       <Type>Group</Type>
       <SortOrder>10</SortOrder>
     </Tab>
     <Tab>
+      <Key>2c48d0b8-81d9-4f05-a3b2-b9c3c2117756</Key>
       <Caption>Data</Caption>
       <Alias>data</Alias>
       <Type>Tab</Type>
       <SortOrder>20</SortOrder>
     </Tab>
     <Tab>
-      <Caption>Media</Caption>
-      <Alias>umbraco/media</Alias>
-      <Type>Group</Type>
-      <SortOrder>20</SortOrder>
-    </Tab>
-    <Tab>
-      <Caption>XML Sitemap</Caption>
-      <Alias>web/xmlSitemap</Alias>
-      <Type>Group</Type>
-      <SortOrder>20</SortOrder>
-    </Tab>
-    <Tab>
-      <Caption>Umbraco</Caption>
-      <Alias>umbraco</Alias>
-      <Type>Tab</Type>
-      <SortOrder>30</SortOrder>
-    </Tab>
-    <Tab>
+      <Key>efb07f82-297a-4c88-ac8d-7b9084a92c51</Key>
       <Caption>Members</Caption>
       <Alias>umbraco/members</Alias>
       <Type>Group</Type>
       <SortOrder>30</SortOrder>
     </Tab>
     <Tab>
+      <Key>cb57cf4a-b01e-4a25-8d87-b74d12e2c4d5</Key>
+      <Caption>Umbraco</Caption>
+      <Alias>umbraco</Alias>
+      <Type>Tab</Type>
+      <SortOrder>30</SortOrder>
+    </Tab>
+    <Tab>
+      <Key>959c065c-1b32-4c83-8fa3-13057d26c9c4</Key>
+      <Caption>Media</Caption>
+      <Alias>umbraco/media</Alias>
+      <Type>Tab</Type>
+      <SortOrder>30</SortOrder>
+    </Tab>
+    <Tab>
+      <Key>4605ad78-d0b0-491b-adc9-4caf2c6f044e</Key>
       <Caption>Web</Caption>
       <Alias>web</Alias>
       <Type>Tab</Type>
       <SortOrder>40</SortOrder>
     </Tab>
     <Tab>
+      <Key>e14a2d1f-1c30-4c24-9a5b-9b9a8ad78e01</Key>
       <Caption>Users</Caption>
       <Alias>umbraco/users</Alias>
       <Type>Group</Type>
       <SortOrder>40</SortOrder>
     </Tab>
     <Tab>
+      <Key>5642b4a3-9cf4-48c2-8441-d586bd3ada8c</Key>
+      <Caption>XML Sitemap</Caption>
+      <Alias>web/xmlSitemap</Alias>
+      <Type>Tab</Type>
+      <SortOrder>40</SortOrder>
+    </Tab>
+    <Tab>
+      <Key>ab5ad742-1994-4ce2-86fc-2a9761d9d305</Key>
       <Caption>Schema</Caption>
       <Alias>umbraco/schema</Alias>
       <Type>Group</Type>
