--- a/src/Umbraco.Cms.9.x/uSync/v9/ContentTypes/testmiscpage.config
+++ b/src/Umbraco.Cms.9.x/uSync/v9/ContentTypes/testmiscpage.config
@@ -69,6 +69,7 @@
   </GenericProperties>
   <Tabs>
     <Tab>
+      <Key>93ff5c7e-e824-4802-a0a4-48111f9b25de</Key>
       <Caption>Textboxes</Caption>
       <Alias>textboxes</Alias>
       <Type>Tab</Type>
