--- a/src/Umbraco.Cms.9.x/uSync/v9/ContentTypes/testnotespage.config
+++ b/src/Umbraco.Cms.9.x/uSync/v9/ContentTypes/testnotespage.config
@@ -85,18 +85,21 @@
   </GenericProperties>
   <Tabs>
     <Tab>
+      <Key>462ff513-f227-4907-8e88-a95673e8678c</Key>
       <Caption>Notes</Caption>
       <Alias>notes</Alias>
       <Type>Tab</Type>
       <SortOrder>10</SortOrder>
     </Tab>
     <Tab>
+      <Key>1338d7e2-9439-4493-8181-8099c7c21a61</Key>
       <Caption>Render Macro</Caption>
       <Alias>renderMacro</Alias>
       <Type>Tab</Type>
       <SortOrder>20</SortOrder>
     </Tab>
     <Tab>
+      <Key>3bde6fe4-77b8-41f1-939d-3a29e251707e</Key>
       <Caption>Templated Label</Caption>
       <Alias>templatedLabel</Alias>
       <Type>Tab</Type>
