--- a/src/Umbraco.Cms.10.x/Umbraco.Cms.10.x.csproj
+++ b/src/Umbraco.Cms.10.x/Umbraco.Cms.10.x.csproj
@@ -11,7 +11,7 @@
 
         <ItemGroup>
         <PackageReference Include="Umbraco.Cms" Version="10.0.0" />
-        <PackageReference Include="uSync" Version="10.0.0-rc5" />
+        <PackageReference Include="uSync" Version="10.0.0" />
         <ProjectReference Include="..\Umbraco.Community.Contentment\Umbraco.Community.Contentment.csproj" />
     </ItemGroup>
 
