Added "Text Input - Email" to v8 test site

--- a/src/Umbraco.Cms.8.x/uSync/v8/Content/test-misc.config
+++ b/src/Umbraco.Cms.8.x/uSync/v8/Content/test-misc.config
@@ -26,5 +26,8 @@
     <textInput>
       <Value><![CDATA[Hello world]]></Value>
     </textInput>
+    <textInputEmail>
+      <Value><![CDATA[test@test.test]]></Value>
+    </textInputEmail>
   </Properties>
 </Content>
