--- a/src/Umbraco.Cms.8.x/uSync/v8/ContentTypes/testmiscpage.config
+++ b/src/Umbraco.Cms.8.x/uSync/v8/ContentTypes/testmiscpage.config
@@ -27,7 +27,7 @@
       <Mandatory>false</Mandatory>
       <Validation></Validation>
       <Description><![CDATA[Used as a guide/comparison for the Textbox List editor.]]></Description>
-      <SortOrder>10</SortOrder>
+      <SortOrder>50</SortOrder>
       <Tab Alias="textboxes">Textboxes</Tab>
       <Variations>Nothing</Variations>
       <MandatoryMessage></MandatoryMessage>
@@ -43,7 +43,7 @@
       <Mandatory>false</Mandatory>
       <Validation></Validation>
       <Description><![CDATA[]]></Description>
-      <SortOrder>50</SortOrder>
+      <SortOrder>55</SortOrder>
       <Tab Alias="textboxes">Textboxes</Tab>
       <Variations>Nothing</Variations>
       <MandatoryMessage></MandatoryMessage>
@@ -59,7 +59,23 @@
       <Mandatory>false</Mandatory>
       <Validation></Validation>
       <Description><![CDATA[]]></Description>
-      <SortOrder>20</SortOrder>
+      <SortOrder>10</SortOrder>
+      <Tab Alias="textboxes">Textboxes</Tab>
+      <Variations>Nothing</Variations>
+      <MandatoryMessage></MandatoryMessage>
+      <ValidationRegExpMessage></ValidationRegExpMessage>
+      <LabelOnTop>false</LabelOnTop>
+    </GenericProperty>
+    <GenericProperty>
+      <Key>5b625af7-3682-4199-957e-082ad9f51c90</Key>
+      <Name>Text Input Email</Name>
+      <Alias>textInputEmail</Alias>
+      <Definition>47ba9960-89c6-4115-8108-76047170cfac</Definition>
+      <Type>Umbraco.Community.Contentment.TextInput</Type>
+      <Mandatory>false</Mandatory>
+      <Validation></Validation>
+      <Description><![CDATA[]]></Description>
+      <SortOrder>15</SortOrder>
       <Tab Alias="textboxes">Textboxes</Tab>
       <Variations>Nothing</Variations>
       <MandatoryMessage></MandatoryMessage>
