TextboxList - small feature
If the item key matches a valid HTML5 input type,
e.g. "email", "tel", etc.
Then the `type` attribute will be set to the same.

--- a/src/Umbraco.Cms.8.x/uSync/v8/Content/test-misc.config
+++ b/src/Umbraco.Cms.8.x/uSync/v8/Content/test-misc.config
@@ -18,9 +18,9 @@
     </testTextbox>
     <textboxList>
       <Value><![CDATA[{
-  "telephone": "+44123456789",
+  "tel": "+44123456789",
   "email": "test@test.test",
-  "website": "https://github.com/sponsors/leekelleher"
+  "url": "https://github.com/sponsors/leekelleher"
 }]]></Value>
     </textboxList>
     <textInput>
