--- a/src/Umbraco.Cms.8.x/uSync/v8/DataTypes/ContentmentTextboxListExample.config
+++ b/src/Umbraco.Cms.8.x/uSync/v8/DataTypes/ContentmentTextboxListExample.config
@@ -15,7 +15,7 @@
           {
             "icon": "icon-old-phone color-black",
             "name": "Telephone",
-            "value": "telephone",
+            "value": "tel",
             "description": ""
           },
           {
@@ -27,7 +27,7 @@
           {
             "icon": "icon-umb-translation color-black",
             "name": "Website",
-            "value": "website",
+            "value": "url",
             "description": ""
           }
         ]
