[WIP] "Social Links" editor

--- a/src/Umbraco.Cms.10.x/uSync/v10/Content/test-misc.config
+++ b/src/Umbraco.Cms.10.x/uSync/v10/Content/test-misc.config
@@ -16,6 +16,9 @@
     <iconPicker>
       <Value><![CDATA[icon-science color-grey]]></Value>
     </iconPicker>
+    <socialLinks>
+      <Value><![CDATA[[{"network":"twitter","name":"Twitter","url":"https://twitter.com/leekelleher"},{"network":"github","name":"GitHub","url":"https://github.com/leekelleher"}]]]></Value>
+    </socialLinks>
     <testTextbox>
       <Value><![CDATA[Hello world]]></Value>
     </testTextbox>
