--- a/src/Umbraco.Cms.10.x/uSync/v10/ContentTypes/testmiscpage.config
+++ b/src/Umbraco.Cms.10.x/uSync/v10/ContentTypes/testmiscpage.config
@@ -40,6 +40,22 @@
       <LabelOnTop>false</LabelOnTop>
     </GenericProperty>
     <GenericProperty>
+      <Key>93fcc391-f092-4e85-917f-8e1f5a7024be</Key>
+      <Name>Social Links</Name>
+      <Alias>socialLinks</Alias>
+      <Definition>55ee110f-c4eb-4688-b701-f0be655ca25b</Definition>
+      <Type>Umbraco.Community.Contentment.SocialLinks</Type>
+      <Mandatory>false</Mandatory>
+      <Validation></Validation>
+      <Description><![CDATA[]]></Description>
+      <SortOrder>10</SortOrder>
+      <Tab Alias="socialLinks">Social Links</Tab>
+      <Variations>Nothing</Variations>
+      <MandatoryMessage></MandatoryMessage>
+      <ValidationRegExpMessage></ValidationRegExpMessage>
+      <LabelOnTop>false</LabelOnTop>
+    </GenericProperty>
+    <GenericProperty>
       <Key>5049c7f6-0ccb-4315-b4fb-3c860d7c39cc</Key>
       <Name>Test Textbox</Name>
       <Alias>testTextbox</Alias>
@@ -105,6 +121,13 @@
     </GenericProperty>
   </GenericProperties>
   <Tabs>
+    <Tab>
+      <Key>7714882f-3f44-489d-ad10-471b5ead0723</Key>
+      <Caption>Social Links</Caption>
+      <Alias>socialLinks</Alias>
+      <Type>Tab</Type>
+      <SortOrder>-50</SortOrder>
+    </Tab>
     <Tab>
       <Key>e1176c1d-7a9b-4cb7-b9f3-4b54e726573f</Key>
       <Caption>Icons</Caption>
