--- a/src/Umbraco.Cms.8.x/uSync/v8/Content/test-misc.config
+++ b/src/Umbraco.Cms.8.x/uSync/v8/Content/test-misc.config
@@ -16,6 +16,20 @@
     <iconPicker>
       <Value><![CDATA[icon-document color-black]]></Value>
     </iconPicker>
+    <socialLinks>
+      <Value><![CDATA[[
+  {
+    "network": "twitter",
+    "name": "Twitter",
+    "url": "https://twitter.com/leekelleher"
+  },
+  {
+    "network": "github",
+    "name": "GitHub",
+    "url": "https://github.com/leekelleher"
+  }
+]]]></Value>
+    </socialLinks>
     <testTextbox>
       <Value><![CDATA[Hello world]]></Value>
     </testTextbox>
