--- a/src/Umbraco.Cms.8.x/uSync/v8/ContentTypes/testmiscpage.config
+++ b/src/Umbraco.Cms.8.x/uSync/v8/ContentTypes/testmiscpage.config
@@ -35,6 +35,23 @@
       <LabelOnTop>false</LabelOnTop>
     </GenericProperty>
     <GenericProperty>
+      <Key>71c44dfa-94ea-4ef8-a1e3-adb02a66c0c4</Key>
+      <Name>Social Links</Name>
+      <Alias>socialLinks</Alias>
+      <Definition>55ee110f-c4eb-4688-b701-f0be655ca25b</Definition>
+      <Type>Umbraco.Community.Contentment.SocialLinks</Type>
+      <Mandatory>false</Mandatory>
+      <Validation></Validation>
+      <Description><![CDATA[]]></Description>
+      <SortOrder>10</SortOrder>
+      <Tab Alias="socialLinks">Social Links</Tab>
+      <Variations>Nothing</Variations>
+      <MandatoryMessage></MandatoryMessage>
+      <ValidationRegExpMessage></ValidationRegExpMessage>
+      <LabelOnTop>false</LabelOnTop>
+    </GenericProperty>
+    <GenericProperty>
+    <GenericProperty>
       <Key>5049c7f6-0ccb-4315-b4fb-3c860d7c39cc</Key>
       <Name>Test Textbox</Name>
       <Alias>testTextbox</Alias>
@@ -101,6 +118,12 @@
   </GenericProperties>
   <Tabs>
     <Tab>
+      <Caption>Social Links</Caption>
+      <SortOrder>-50</SortOrder>
+      <Alias>socialLinks</Alias>
+      <Type>Tab</Type>
+    </Tab>
+    <Tab>
       <Caption>Icons</Caption>
       <SortOrder>10</SortOrder>
       <Alias>icons</Alias>
@@ -108,7 +131,7 @@
     </Tab>
     <Tab>
       <Caption>Textboxes</Caption>
-      <SortOrder>10</SortOrder>
+      <SortOrder>20</SortOrder>
       <Alias>textboxes</Alias>
       <Type>Tab</Type>
     </Tab>
