Updated content/schema on v10 demo site

--- a/src/Umbraco.Cms.10.x/uSync/v10/Content/test-misc.config
+++ b/src/Umbraco.Cms.10.x/uSync/v10/Content/test-misc.config
@@ -13,15 +13,20 @@
     <Template Key="32cf5caf-9267-4cf4-8327-2dcbd24a1cd7">testMiscPage</Template>
   </Info>
   <Properties>
+    <iconPicker>
+      <Value><![CDATA[icon-science color-grey]]></Value>
+    </iconPicker>
     <testTextbox>
       <Value><![CDATA[Hello world]]></Value>
     </testTextbox>
     <textboxList>
-      <Value><![CDATA[{
-  "telephone": "+44123456789",
-  "email": "test@test.test",
-  "website": "https://github.com/sponsors/leekelleher"
-}]]></Value>
+      <Value><![CDATA[{"telephone":"+44123456789","email":"test@test.test","website":"https://github.com/sponsors/leekelleher"}]]></Value>
     </textboxList>
+    <textInput>
+      <Value><![CDATA[]]></Value>
+    </textInput>
+    <textInputEmail>
+      <Value><![CDATA[test@test.test]]></Value>
+    </textInputEmail>
   </Properties>
 </Content>
