--- a/src/Umbraco.Cms.10.x/uSync/v10/ContentTypes/testmiscpage.config
+++ b/src/Umbraco.Cms.10.x/uSync/v10/ContentTypes/testmiscpage.config
@@ -48,7 +48,7 @@
       <Mandatory>false</Mandatory>
       <Validation></Validation>
       <Description><![CDATA[Used as a guide/comparison for the Textbox List editor.]]></Description>
-      <SortOrder>10</SortOrder>
+      <SortOrder>50</SortOrder>
       <Tab Alias="textboxes">Textboxes</Tab>
       <Variations>Nothing</Variations>
       <MandatoryMessage></MandatoryMessage>
@@ -64,7 +64,39 @@
       <Mandatory>false</Mandatory>
       <Validation></Validation>
       <Description><![CDATA[]]></Description>
-      <SortOrder>50</SortOrder>
+      <SortOrder>55</SortOrder>
+      <Tab Alias="textboxes">Textboxes</Tab>
+      <Variations>Nothing</Variations>
+      <MandatoryMessage></MandatoryMessage>
+      <ValidationRegExpMessage></ValidationRegExpMessage>
+      <LabelOnTop>false</LabelOnTop>
+    </GenericProperty>
+    <GenericProperty>
+      <Key>fcb16736-b93b-4a0f-ba1d-ee845a0fd3d6</Key>
+      <Name>Text Input</Name>
+      <Alias>textInput</Alias>
+      <Definition>f560933e-d476-4157-b512-0971342619cb</Definition>
+      <Type>Umbraco.Community.Contentment.TextInput</Type>
+      <Mandatory>false</Mandatory>
+      <Validation></Validation>
+      <Description><![CDATA[]]></Description>
+      <SortOrder>10</SortOrder>
+      <Tab Alias="textboxes">Textboxes</Tab>
+      <Variations>Nothing</Variations>
+      <MandatoryMessage></MandatoryMessage>
+      <ValidationRegExpMessage></ValidationRegExpMessage>
+      <LabelOnTop>false</LabelOnTop>
+    </GenericProperty>
+    <GenericProperty>
+      <Key>dff1784d-88b5-4d6e-ad01-abbfab6ac68e</Key>
+      <Name>Text Input Email</Name>
+      <Alias>textInputEmail</Alias>
+      <Definition>47ba9960-89c6-4115-8108-76047170cfac</Definition>
+      <Type>Umbraco.Community.Contentment.TextInput</Type>
+      <Mandatory>false</Mandatory>
+      <Validation></Validation>
+      <Description><![CDATA[]]></Description>
+      <SortOrder>15</SortOrder>
       <Tab Alias="textboxes">Textboxes</Tab>
       <Variations>Nothing</Variations>
       <MandatoryMessage></MandatoryMessage>
