v8 demo site - added Icon Picker property

--- a/src/Umbraco.Cms.8.x/uSync/v8/Content/test-misc.config
+++ b/src/Umbraco.Cms.8.x/uSync/v8/Content/test-misc.config
@@ -13,6 +13,9 @@
     <Template Key="32cf5caf-9267-4cf4-8327-2dcbd24a1cd7">testMiscPage</Template>
   </Info>
   <Properties>
+    <iconPicker>
+      <Value><![CDATA[icon-document color-black]]></Value>
+    </iconPicker>
     <testTextbox>
       <Value><![CDATA[Hello world]]></Value>
     </testTextbox>
