--- a/src/Umbraco.Cms.8.x/uSync/v8/ContentTypes/testmiscpage.config
+++ b/src/Umbraco.Cms.8.x/uSync/v8/ContentTypes/testmiscpage.config
@@ -19,6 +19,22 @@
   <Structure />
   <GenericProperties>
     <GenericProperty>
+      <Key>29f14ac4-a520-4a4b-9fd5-378df0d1b84c</Key>
+      <Name>Icon Picker</Name>
+      <Alias>iconPicker</Alias>
+      <Definition>5a6e2bd2-f508-4f5c-9dfd-7dd61f205966</Definition>
+      <Type>Umbraco.Community.Contentment.IconPicker</Type>
+      <Mandatory>false</Mandatory>
+      <Validation></Validation>
+      <Description><![CDATA[]]></Description>
+      <SortOrder>10</SortOrder>
+      <Tab Alias="icons">Icons</Tab>
+      <Variations>Nothing</Variations>
+      <MandatoryMessage></MandatoryMessage>
+      <ValidationRegExpMessage></ValidationRegExpMessage>
+      <LabelOnTop>false</LabelOnTop>
+    </GenericProperty>
+    <GenericProperty>
       <Key>5049c7f6-0ccb-4315-b4fb-3c860d7c39cc</Key>
       <Name>Test Textbox</Name>
       <Alias>testTextbox</Alias>
@@ -84,6 +100,12 @@
     </GenericProperty>
   </GenericProperties>
   <Tabs>
+    <Tab>
+      <Caption>Icons</Caption>
+      <SortOrder>10</SortOrder>
+      <Alias>icons</Alias>
+      <Type>Tab</Type>
+    </Tab>
     <Tab>
       <Caption>Textboxes</Caption>
       <SortOrder>10</SortOrder>
