uSync clean exports for v8, v9, v10

--- a/src/Umbraco.Cms.10.x/uSync/v10/Content/test-data-list.config
+++ b/src/Umbraco.Cms.10.x/uSync/v10/Content/test-data-list.config
@@ -14,26 +14,16 @@
   </Info>
   <Properties>
     <dataListCountries>
-      <Value><![CDATA[[
-  "GB",
-  "DK"
-]]]></Value>
+      <Value><![CDATA[["GB","DK"]]]></Value>
     </dataListCountries>
     <dataListCsv>
       <Value><![CDATA[value3]]></Value>
     </dataListCsv>
     <dataListCurrencies>
-      <Value><![CDATA[[
-  "GBP",
-  "DKK"
-]]]></Value>
+      <Value><![CDATA[["GBP","DKK"]]]></Value>
     </dataListCurrencies>
     <dataListEnumeration>
-      <Value><![CDATA[[
-  "Red",
-  "Blue",
-  "Green"
-]]]></Value>
+      <Value><![CDATA[["Red","Blue","Green"]]]></Value>
     </dataListEnumeration>
     <dataListFileSystem>
       <Value><![CDATA[~/umbraco/lib/ace-builds/src-min-noconflict/mode-xml.js]]></Value>
@@ -42,10 +32,7 @@
       <Value><![CDATA[value3]]></Value>
     </dataListJson>
     <dataListLanguages>
-      <Value><![CDATA[[
-  "en",
-  "da"
-]]]></Value>
+      <Value><![CDATA[["en","da"]]]></Value>
     </dataListLanguages>
     <dataListNumberRange>
       <Value><![CDATA[5]]></Value>
@@ -54,17 +41,10 @@
       <Value><![CDATA[]]></Value>
     </dataListSql>
     <dataListTimeZones>
-      <Value><![CDATA[[
-  "GMT Standard Time",
-  "Romance Standard Time"
-]]]></Value>
+      <Value><![CDATA[["GMT Standard Time","Romance Standard Time"]]]></Value>
     </dataListTimeZones>
     <dataListUCssClassName>
-      <Value><![CDATA[[
-  "twitter-square",
-  "facebook-square",
-  "linkedin-square"
-]]]></Value>
+      <Value><![CDATA[["twitter-square","facebook-square","linkedin-square"]]]></Value>
     </dataListUCssClassName>
     <dataListUmbracoContent>
       <Value><![CDATA[umb://document/7c6bcf13fa7d4949b975ffb331ee0dcc]]></Value>
@@ -115,14 +95,10 @@
       <Value><![CDATA[value3]]></Value>
     </dataListXml>
     <dataListXmlSitemapChangeFrequency>
-      <Value><![CDATA[[
-  "never"
-]]]></Value>
+      <Value><![CDATA[["never"]]]></Value>
     </dataListXmlSitemapChangeFrequency>
     <dataListXmlSitemapPriority>
-      <Value><![CDATA[[
-  "0.5"
-]]]></Value>
+      <Value><![CDATA[["0.5"]]]></Value>
     </dataListXmlSitemapPriority>
   </Properties>
 </Content>
