--- a/src/Umbraco.Cms.8.x/uSync/v8/Content/test-data-list.config
+++ b/src/Umbraco.Cms.8.x/uSync/v8/Content/test-data-list.config
@@ -116,7 +116,9 @@
       <Value><![CDATA[test@test.com]]></Value>
     </dataListUmbracoUsers>
     <dataListUserDefined>
-      <Value><![CDATA[value3]]></Value>
+      <Value><![CDATA[[
+  "value3"
+]]]></Value>
     </dataListUserDefined>
     <dataListXml>
       <Value><![CDATA[value3]]></Value>
