Testing "Umbraco Tags" data-source (on v10)
I mean, I had tested it, but it wasn't apparent in the demo site.

--- a/src/Umbraco.Cms.10.x/uSync/v10/Content/test-data-list.config
+++ b/src/Umbraco.Cms.10.x/uSync/v10/Content/test-data-list.config
@@ -80,7 +80,7 @@
       <Value><![CDATA[]]></Value>
     </dataListUmbracoMembers>
     <dataListUmbracoTags>
-      <Value><![CDATA[]]></Value>
+      <Value><![CDATA[Ready]]></Value>
     </dataListUmbracoTags>
     <dataListUmbracoUserGroups>
       <Value><![CDATA[editor]]></Value>
@@ -100,5 +100,8 @@
     <dataListXmlSitemapPriority>
       <Value><![CDATA[["0.5"]]]></Value>
     </dataListXmlSitemapPriority>
+    <umbracoTags>
+      <Value><![CDATA[["Ready","Steady","Go"]]]></Value>
+    </umbracoTags>
   </Properties>
 </Content>
