--- a/src/Umbraco.Cms.10.x/uSync/v10/ContentTypes/testdatalistpage.config
+++ b/src/Umbraco.Cms.10.x/uSync/v10/ContentTypes/testdatalistpage.config
@@ -487,6 +487,22 @@
       <ValidationRegExpMessage></ValidationRegExpMessage>
       <LabelOnTop>false</LabelOnTop>
     </GenericProperty>
+    <GenericProperty>
+      <Key>211ab403-63d7-4c03-a1d1-c719248ce279</Key>
+      <Name>Umbraco Tags</Name>
+      <Alias>umbracoTags</Alias>
+      <Definition>b6b73142-b9c1-4bf8-a16d-e1c23320b549</Definition>
+      <Type>Umbraco.Tags</Type>
+      <Mandatory>false</Mandatory>
+      <Validation></Validation>
+      <Description><![CDATA[Used to populate the "Data List Umbraco Tags" editor (above).]]></Description>
+      <SortOrder>5</SortOrder>
+      <Tab Alias="umbraco/content">Content</Tab>
+      <Variations>Nothing</Variations>
+      <MandatoryMessage></MandatoryMessage>
+      <ValidationRegExpMessage></ValidationRegExpMessage>
+      <LabelOnTop>false</LabelOnTop>
+    </GenericProperty>
   </GenericProperties>
   <Tabs>
     <Tab>
