[WIP] DataList - Umbraco Content Property Value data-source
https://dev.to/timgeyssens/content-editor-defined-dropdowns-checkboxlists-and-radiobuttonlists-in-umbraco-v8-with-contentment-123f

--- a/src/Umbraco.Cms.10.x/uSync/v10/Content/test-data-list.config
+++ b/src/Umbraco.Cms.10.x/uSync/v10/Content/test-data-list.config
@@ -55,6 +55,9 @@
     <dataListUmbracoContentProperties>
       <Value><![CDATA[pageBlocks]]></Value>
     </dataListUmbracoContentProperties>
+    <dataListUmbracoContentPropertyValue>
+      <Value><![CDATA[["Steady"]]]></Value>
+    </dataListUmbracoContentPropertyValue>
     <dataListUmbracoContentTypes>
       <Value><![CDATA[umb://document-type/15cf8bbd22f24b61a29518235c978614]]></Value>
     </dataListUmbracoContentTypes>
