--- a/src/Umbraco.Cms.10.x/uSync/v10/Content/test-misc.config
+++ b/src/Umbraco.Cms.10.x/uSync/v10/Content/test-misc.config
@@ -19,11 +19,16 @@
     <iconPicker>
       <Value><![CDATA[icon-science color-grey]]></Value>
     </iconPicker>
+    <optionsForDataList>
+      <Value><![CDATA[Ready
+Steady
+Go]]></Value>
+    </optionsForDataList>
     <socialLinks>
       <Value><![CDATA[[{"network":"twitter","name":"Twitter","url":"https://twitter.com/leekelleher"},{"network":"github","name":"GitHub","url":"https://github.com/leekelleher"}]]]></Value>
     </socialLinks>
     <testTextbox>
-      <Value><![CDATA[Hello world]]></Value>
+      <Value><![CDATA[Ready,Steady,Go]]></Value>
     </testTextbox>
     <textboxList>
       <Value><![CDATA[{"telephone":"+44123456789","email":"test@test.test","website":"https://github.com/sponsors/leekelleher"}]]></Value>
