--- a/src/Umbraco.Cms.10.x/uSync/v10/ContentTypes/testmiscpage.config
+++ b/src/Umbraco.Cms.10.x/uSync/v10/ContentTypes/testmiscpage.config
@@ -56,6 +56,22 @@
       <LabelOnTop>false</LabelOnTop>
     </GenericProperty>
     <GenericProperty>
+      <Key>7d67b024-74f3-43c3-9eb1-a62a98207caf</Key>
+      <Name>Options for Data List</Name>
+      <Alias>optionsForDataList</Alias>
+      <Definition>c0b4fb7d-436a-40fc-a5f2-dc88d868b1af</Definition>
+      <Type>Umbraco.MultipleTextstring</Type>
+      <Mandatory>false</Mandatory>
+      <Validation></Validation>
+      <Description><![CDATA[]]></Description>
+      <SortOrder>70</SortOrder>
+      <Tab Alias="textboxes">Textboxes</Tab>
+      <Variations>Nothing</Variations>
+      <MandatoryMessage></MandatoryMessage>
+      <ValidationRegExpMessage></ValidationRegExpMessage>
+      <LabelOnTop>false</LabelOnTop>
+    </GenericProperty>
+    <GenericProperty>
       <Key>93fcc391-f092-4e85-917f-8e1f5a7024be</Key>
       <Name>Social Links</Name>
       <Alias>socialLinks</Alias>
