DataList - amended SQL data-source
to support SQLite on Umbraco 10 and 11.

I'm not happy with the structure of the code in this class,
feels like a complete mess. Needs reviewing and refactoring.

--- a/src/Umbraco.Cms.10.x/uSync/v10/ContentTypes/testdatalistpage.config
+++ b/src/Umbraco.Cms.10.x/uSync/v10/ContentTypes/testdatalistpage.config
@@ -156,7 +156,7 @@
       <Name>Data List SQL</Name>
       <Alias>dataListSql</Alias>
       <Definition>a57a0bc0-732f-4d00-8fa0-6635b4de28f4</Definition>
-      <Type>Umbraco.Community.Contentment.TemplatedLabel</Type>
+      <Type>Umbraco.Community.Contentment.DataList</Type>
       <Mandatory>false</Mandatory>
       <Validation></Validation>
       <Description><![CDATA[]]></Description>
