--- a/src/Umbraco.Cms.10.x/uSync/v10/Content/test-data-list.config
+++ b/src/Umbraco.Cms.10.x/uSync/v10/Content/test-data-list.config
@@ -38,7 +38,7 @@
       <Value><![CDATA[5]]></Value>
     </dataListNumberRange>
     <dataListSql>
-      <Value><![CDATA[]]></Value>
+      <Value><![CDATA[DDF45934-719E-4F17-8CD1-384D3A5A0172]]></Value>
     </dataListSql>
     <dataListTimeZones>
       <Value><![CDATA[["GMT Standard Time","Romance Standard Time"]]]></Value>
