SocialLinks: Shortened the base YouTube URL
YouTube now has a "handles" feature, for shorter profile URLs.
https://support.google.com/youtube/answer/11585688?hl=en

--- a/src/Umbraco.Cms.11.x/uSync/v9/DataTypes/ContentmentSocialLinks.config
+++ b/src/Umbraco.Cms.11.x/uSync/v9/DataTypes/ContentmentSocialLinks.config
@@ -57,7 +57,7 @@
       "value": {
         "network": "youtube",
         "name": "YouTube",
-        "url": "https://www.youtube.com/channel/",
+        "url": "https://youtube.com/",
         "icon": "icon-youtube",
         "backgroundColor": "#f00",
         "iconColor": "#fff"
