[WIP] List Items property-editor

--- a/src/Umbraco.Cms.10.x/appsettings.Development.json
+++ b/src/Umbraco.Cms.10.x/appsettings.Development.json
@@ -28,7 +28,8 @@
                     "From": "your@email.here",
                     "Host": "localhost",
                     "Port": 25
-                }
+                },
+                "TimeOut": "03:00:01"
             },
             "Hosting": {
                 "Debug": true
