--- a/src/Umbraco.Cms.10.x/uSync/v10/ContentTypes/testmiscpage.config
+++ b/src/Umbraco.Cms.10.x/uSync/v10/ContentTypes/testmiscpage.config
@@ -24,6 +24,22 @@
   <Structure />
   <GenericProperties>
     <GenericProperty>
+      <Key>a8a252ea-e668-40e8-9291-6b28fbf838b3</Key>
+      <Name>Data List Items</Name>
+      <Alias>dataListItems</Alias>
+      <Definition>5e916f60-6b57-40a7-a7ae-15a663408fb2</Definition>
+      <Type>Umbraco.Community.Contentment.ListItems</Type>
+      <Mandatory>false</Mandatory>
+      <Validation></Validation>
+      <Description><![CDATA[]]></Description>
+      <SortOrder>50</SortOrder>
+      <Tab Alias="socialLinks">Social Links</Tab>
+      <Variations>Nothing</Variations>
+      <MandatoryMessage></MandatoryMessage>
+      <ValidationRegExpMessage></ValidationRegExpMessage>
+      <LabelOnTop>false</LabelOnTop>
+    </GenericProperty>
+    <GenericProperty>
       <Key>0ec1844a-2609-41af-a23c-e785fdef96e5</Key>
       <Name>Icon Picker</Name>
       <Alias>iconPicker</Alias>
