--- a/src/Umbraco.Cms.11.x/uSync/v9/Content/test-misc.config
+++ b/src/Umbraco.Cms.11.x/uSync/v9/Content/test-misc.config
@@ -13,6 +13,22 @@
     <Template Key="32cf5caf-9267-4cf4-8327-2dcbd24a1cd7">testMiscPage</Template>
   </Info>
   <Properties>
+    <dataListItems>
+      <Value><![CDATA[[
+  {
+    "icon": "icon-stop",
+    "name": "Goalkeeper",
+    "value": "goalkeeper",
+    "description": ""
+  },
+  {
+    "icon": "icon-stop",
+    "name": "Defender",
+    "value": "defender",
+    "description": ""
+  }
+]]]></Value>
+    </dataListItems>
     <iconPicker>
       <Value><![CDATA[icon-science color-grey]]></Value>
     </iconPicker>
