--- a/src/Umbraco.Cms.11.x/uSync/v9/ContentTypes/testmiscpage.config
+++ b/src/Umbraco.Cms.11.x/uSync/v9/ContentTypes/testmiscpage.config
@@ -24,6 +24,22 @@
   <Structure />
   <GenericProperties>
     <GenericProperty>
+      <Key>b7f7d5ae-9f73-4aea-9675-0ee14c72f8af</Key>
+      <Name>Data List Items</Name>
+      <Alias>dataListItems</Alias>
+      <Definition>057ce77f-e3b2-4dfb-9b14-5984be8e11e8</Definition>
+      <Type>Umbraco.Community.Contentment.ListItems</Type>
+      <Mandatory>false</Mandatory>
+      <Validation></Validation>
+      <Description><![CDATA[]]></Description>
+      <SortOrder>20</SortOrder>
+      <Tab Alias="socialLinks">Social Links</Tab>
+      <Variations>Nothing</Variations>
+      <MandatoryMessage></MandatoryMessage>
+      <ValidationRegExpMessage></ValidationRegExpMessage>
+      <LabelOnTop>false</LabelOnTop>
+    </GenericProperty>
+    <GenericProperty>
       <Key>0ec1844a-2609-41af-a23c-e785fdef96e5</Key>
       <Name>Icon Picker</Name>
       <Alias>iconPicker</Alias>
