--- a/src/Umbraco.Cms.10.x/uSync/v10/Content/test-misc.config
+++ b/src/Umbraco.Cms.10.x/uSync/v10/Content/test-misc.config
@@ -13,6 +13,9 @@
     <Template Key="32cf5caf-9267-4cf4-8327-2dcbd24a1cd7">testMiscPage</Template>
   </Info>
   <Properties>
+    <dataListItems>
+      <Value><![CDATA[[{"icon":"icon-stop color-red","name":"Ready","value":"ready","description":""},{"icon":"icon-stop color-amber","name":"Steady","value":"steady","description":""},{"icon":"icon-stop color-green","name":"Go","value":"go","description":""}]]]></Value>
+    </dataListItems>
     <iconPicker>
       <Value><![CDATA[icon-science color-grey]]></Value>
     </iconPicker>
